--- a/hositamtam/src/main/webapp/css/marketList.css
+++ b/hositamtam/src/main/webapp/css/marketList.css
@@ -1,5 +1,5 @@
 .section {
-	margin-top: 75px;
+	margin-top: 4rem;
 	width: 100%;
 	height: 100%;
 	position: relative;
@@ -14,8 +14,8 @@ body{
 }
 
 #mkListResult {
-	width: 30%;
-	height: 100%;
+	width: 700px;
+	height: 900px;
 	overflow: auto;
 	/* background-color: #eeeeee; */
 }
@@ -43,7 +43,7 @@ body{
 	/*height: 150px;*/
 }
 
-#mkSearchName {
+#howGetMarket {
 	font-size: 2rem;
 	font-weight: bold;
 	border-bottom: 2px solid #0e4194;
