--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -29,6 +29,7 @@
     width:70%; 
     float: left;
 }
+
 .plusStore{
     width: 50px;
     height: 50px;
@@ -87,11 +88,12 @@ button{
     font-size: 40px;
 }
 
-.searchResultName button{
+#toPost{
     padding: 5px;
-    color: white;
+    
     border-radius: 10px;
-    font-size: 35px;
+    
+    width: 150px;
     height: 50px;
     background-color: #e6007e;
     border: 0;
@@ -99,10 +101,14 @@ button{
     transition: transform 0.5s ease-in-out;
     box-shadow: 0px 5px 0px 0px pink;
 }
+#toPost a{
+	font-size: 35px;
+	color: white;
+	text-decoration: none;
+}
 
 
-
-.searchResultName button:hover{
+#toPost:hover{
     transform: rotate(15deg);
     animation: rotateAnimation 0.5s ease-in-out infinite;
 }
