프론트 - 마이페이지 더보기 버튼/css 수정

--- a/hositamtam/src/main/webapp/css/myPage.css
+++ b/hositamtam/src/main/webapp/css/myPage.css
@@ -248,6 +248,13 @@ a {
   text-align: center;
 }
 
+.myStore__tr:nth-child(n + 7),
+.myPost__tr:nth-child(n + 7),
+.myReview__tr:nth-child(n + 7),
+.myStoreLike__tr:nth-child(n + 7) {
+  display: none;
+}
+
 .myStore__td,
 .myPost__td,
 .myPost__td__title,
