--- a/hositamtam/src/main/webapp/css/myPage.css
+++ b/hositamtam/src/main/webapp/css/myPage.css
@@ -41,6 +41,7 @@ body {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 /* common */
@@ -60,7 +61,7 @@ a {
   display: block;
   align-items: center;
   text-align: center;
-  margin: 9rem 0 0rem 5rem;
+  margin: 9rem 0 5rem 5rem;
   padding: 40px;
   width: 500px;
   border: 3px solid var(--color-accent);
@@ -117,7 +118,7 @@ a {
   display: block;
   align-items: center;
   text-align: center;
-  margin: 9rem 5rem 0rem 0;
+  margin: 9rem 5rem 5rem 0;
   padding: 40px;
   width: 500px;
   border: 3px solid var(--color-accent);
@@ -219,7 +220,7 @@ a {
 .myStoreLike {
   display: flex;
   justify-content: space-between;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   margin-bottom: 1rem;
 }
 
@@ -306,8 +307,26 @@ a {
   margin-top: 0.3rem;
   border: none;
   border-bottom: 1px solid var(--color-gray);
+  /* border-radius: 4px; */
   color: var(--color-gray);
   background-color: var(--color-background);
+  /* background-color: var(--color-accent); */
+}
+
+.myStore__less,
+.myPost__less,
+.myReview__less,
+.myStoreLike__less {
+  display: none;
+  height: 1.4rem;
+  font-size: 1rem;
+  margin-top: 0.3rem;
+  border: none;
+  border-bottom: 1px solid var(--color-gray);
+  /* border-radius: 4px; */
+  color: var(--color-gray);
+  background-color: var(--color-background);
+  /* background-color: var(--color-accent); */
 }
 
 /* Anchor */
@@ -330,22 +349,27 @@ a {
 }
 
 .myPage__store {
+  /* bottom: 19rem; */
   bottom: 44.25rem;
 }
 
 .myPage__post {
+  /* bottom: 15rem; */
   bottom: 40.25rem;
 }
 
 .myPage__review {
+  /* bottom: 11rem; */
   bottom: 36.25rem;
 }
 
 .myPage__storeLike {
+  /* bottom: 7rem; */
   bottom: 32.25rem;
 }
 
 .myPage__arrow-up {
+  /* bottom: 3rem; */
   bottom: 28.25rem;
 }
 
