스타일만들기

--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -206,7 +206,7 @@ button{
 .infoContent h4{
     text-align: center;
 }
-.infoContent button{
+.infoContent a{
     display: inline-block;
     /* font-family: 'GmarketSans'; */
     margin-left: 5px;
@@ -214,7 +214,11 @@ button{
     color: white;
     border: 0px;
     font-size: 14px;
+    width: 100px;
+    height: 40px;
     border-radius: 10px;
+    line-height: 40px;
+    text-decoration: none;
 }
 .countContainer{
     display: flex;
