경인 - 메인 페이지 카테고리 부분 경로 및 css 수정

--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -149,14 +149,14 @@ ul {
   
   padding: 10px;
 }
-.goCategory button{
+.goCategory a{
+  display: inline-block;
   border: 0;
   background-color: transparent;
   color: white;
 }
-.goCategory:hover{
-  transform: translateX(-50px);
-
+.goCategory li {
+    list-style-type: none;
 }
 
 
