--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -65,6 +65,8 @@ button{
 .mkcontainer{
     display: flex;
     border-bottom: 2px solid #0e4194;
+    min-height: 180px;
+	padding: 5px;
 }
 #mkSearchName{
     font-size: 2rem;
