--- a/hositamtam/src/main/webapp/css/myPage.css
+++ b/hositamtam/src/main/webapp/css/myPage.css
@@ -149,6 +149,7 @@ a {
 .myprofile__delete__button {
   width: 100%;
   margin: 0 1rem;
+  padding: 5px;
   font-size: 20px;
   border-radius: 4px;
   border: none;
