--- a/hositamtam/src/main/webapp/css/postDetail.css
+++ b/hositamtam/src/main/webapp/css/postDetail.css
@@ -9,4 +9,14 @@ hr {
 	border: solid 2px red;
 	width: 50px;
 	height: 50px;
+	border-radius: 25%;
+}
+.fa-heart{
+	font-size: 1.2rem;
+}
+.click-heart{
+	color: red;
+}
+#plikecountUpdate{
+	
 }
