--- a/hositamtam/src/main/webapp/css/postDetail.css
+++ b/hositamtam/src/main/webapp/css/postDetail.css
@@ -6,11 +6,15 @@ hr {
 }
 
 #plikecountUpdate {
-	border: solid 2px red;
+	/*border: solid 2px red;*/
 	width: 50px;
 	height: 50px;
 	border-radius: 25%;
+	background-color: white;
+	font-size: 1.2rem;
+	
 }
+
 .fa-heart{
 	font-size: 1.2rem;
 }
@@ -18,5 +22,23 @@ hr {
 	color: red;
 }
 #plikecountUpdate{
-	
+	display: inline-block;
+}
+.commentInsert{
+	height: 60px;
+	padding: 5px;
+	border-bottom: 1px solid gray;
+}
+.commentBox{
+	height: 60px;
+	padding: 5px;
+	    border-bottom: 1px solid #0188CC;
+}
+
+input[type="submit"] {
+    border: 0;
+    font-size: 20px;
+    border-radius: 5px;
+    background-color: #0188CC;
+    color: white;
 }
