--- a/hositamtam/src/main/webapp/css/marketList.css
+++ b/hositamtam/src/main/webapp/css/marketList.css
@@ -8,14 +8,18 @@ body{
 	overflow: auto;
 }
 #map {
+	min-width: 500px;
+	min-height: 500px;
 	width: 70%;
-	height: 100%;
+	height: 90vh;
 	float: left;
 }
 
 #mkListResult {
-	width: 700px;
-	height: 900px;
+	width: 30%;
+	height: 100%;
+	min-width: 500px;
+	min-height: 90vh;
 	overflow: auto;
 	/* background-color: #eeeeee; */
 }
