--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -1,33 +1,41 @@
+*{
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+
 /* Chrome, Whale, Edge */
 
-.right::-webkit-scrollbar {
-    width: 8px;  /* 스크롤바의 너비 */
+/*.right::-webkit-scrollbar {
+    width: 8px;   스크롤바의 너비 
 }
 
 .right::-webkit-scrollbar-thumb {
-    height: 30%; /* 스크롤바의 길이 */
-    background: #0e4194; /* 스크롤바의 색상 */
+    height: 30%;  스크롤바의 길이 
+    background: #0e4194;  스크롤바의 색상 
     
     border-radius: 10px;
 }
 
 .right::-webkit-scrollbar-track {
-    background: rgba(33, 122, 244, .1);  /*스크롤바 뒷 배경 색상*/
-}
+    background: rgba(33, 122, 244, .1);  스크롤바 뒷 배경 색상
+}*/
 .section {
     margin-top: 75px;
     width: 100%;
     height: 100%;
     position: relative;
+    
   }
-.app{
-    display: flex;
-    height:1027px;   
 
-}
 #map{
-    width:70%; 
-    float: left;
+	min-width: 500px;
+	min-height: 500px;
+	width: 70%;
+	height: 90vh;
+   float: left;
+   
 }
 
 .plusStore{
@@ -53,8 +61,10 @@ button{
 }
 .right{
     border-left: 2px solid #0e4194;
+    min-width: 500px;
+    min-height: 500px;
     width: 30%;
-    height: 1020px;
+    height: 90vh;
     overflow: auto;
     /* background-color: #eeeeee; */
 }
