--- a/hositamtam/src/main/webapp/css/marketList.css
+++ b/hositamtam/src/main/webapp/css/marketList.css
@@ -1,12 +1,26 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "GmarketSans";
+  margin: 0;
+   overflow: auto;
+}
+
+
+
 .section {
 	margin-top: 4rem;
 	width: 100%;
 	height: 100%;
 	position: relative;
 }
-body{
-	overflow: auto;
-}
+
 #map {
 	min-width: 500px;
 	min-height: 500px;
