--- a/hositamtam/src/main/webapp/css/postUpdate.css
+++ b/hositamtam/src/main/webapp/css/postUpdate.css
@@ -1,10 +1,17 @@
-
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    
+  box-sizing: border-box;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "GmarketSans";
+  margin: 0;
+   overflow: auto;
+}
+
 .section {
     width: 100%;
     height: 100%;
