--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -1,7 +1,15 @@
-*{
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+* {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "GmarketSans";
+  margin: 0;
+   overflow: auto;
 }
 
 
@@ -26,18 +34,18 @@
     width: 100%;
     height: 100%;
     position: relative;
-    
+   
   }
 
-#map{
+
+
+#map {
 	min-width: 500px;
 	min-height: 500px;
 	width: 70%;
-	height: 90vh;
-   float: left;
-   
+	height: 93vh;
+	float: left;
 }
-
 .plusStore{
     width: 50px;
     height: 50px;
@@ -50,7 +58,7 @@
     z-index: 9;
     position: absolute;
     right: 10px;
-    bottom: 10px;
+    bottom: 30px;
     transition: all 0.5s;
 }
 
@@ -63,12 +71,15 @@ button{
 
 
 .right{
-    border-left: 2px solid #0e4194;
-    min-width: 500px;
-    min-height: 500px;
-    width: 30%;
-    height: 90vh;
-    overflow: auto;
+   /* border-left: 2px solid #0e4194;
+  
+   */ 
+	width: 30%;
+	height: 100%;
+	min-width: 500px;
+	max-height: 90vh;
+	overflow: auto;
+     overflow-x: hidden;
     /* background-color: #eeeeee; */
 }
 
