--- a/hositamtam/src/main/webapp/css/postDetail.css
+++ b/hositamtam/src/main/webapp/css/postDetail.css
@@ -4,13 +4,13 @@ hr {
     border:0;
 }
 #plikecountUpdate {
-	/*border: solid 2px red;*/
+	border: solid 2px #E6007E;
 	width: 50px;
 	height: 50px;
 	border-radius: 25%;
 	background-color: white;
 	font-size: 1.2rem;
-	color: red;
+	color: #E6007E;
 }
 .fa-heart{
 	font-size: 1.2rem;
@@ -29,7 +29,7 @@ hr {
 .commentBox{
 	height: 60px;
 	padding: 5px;
-	    border-bottom: 1px solid #0188CC;
+	   border-bottom: 1px solid #0188CC;
 }
 input[type="submit"] {
     border: 0;
@@ -37,4 +37,24 @@ input[type="submit"] {
     border-radius: 5px;
     background-color: #0188CC;
     color: white;
+}
+input[type="submit"]:hover {
+	box-shadow: 0 0 0 18px transparent;
+    animation: pulseSubmit 1s;
+}
+#plikecountUpdate {
+    &:hover {
+      box-shadow: 0 0 0 18px transparent;
+      animation: pulse 1s;
+    }
+  }
+@keyframes pulse {
+  from {
+    box-shadow: 0 0 0 0 #E6007E;
+  }
+}
+@keyframes pulseSubmit {
+  from {
+    box-shadow: 0 0 0 0 #0188CC;
+  }
 }
