[영진]프론트- 리뷰 생략부분 호버하면 보이게 등

--- a/hositamtam/src/main/webapp/css/myPage.css
+++ b/hositamtam/src/main/webapp/css/myPage.css
@@ -315,6 +315,10 @@ a {
   white-space: nowrap;
 }
 
+.myReview__td__contents:hover {
+  white-space: inherit;
+}
+
 .myStore__more,
 .myPost__more,
 .myReview__more,
