--- a/hositamtam/src/main/webapp/css/postDetail.css
+++ b/hositamtam/src/main/webapp/css/postDetail.css
@@ -4,16 +4,18 @@ hr {
     border:0;
 }
 #plikecountUpdate {
-	border: solid 2px #E6007E;
-	width: 50px;
-	height: 50px;
-	border-radius: 25%;
+	border: 0;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
 	background-color: white;
 	font-size: 1.2rem;
+	line-height: 40px;
 	color: #E6007E;
+	  
 }
 .fa-heart{
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 }
 .click-heart{
 	color: red;
@@ -44,14 +46,17 @@ input[type="submit"]:hover {
 }
 #plikecountUpdate {
     &:hover {
-      box-shadow: 0 0 0 18px transparent;
+	box-shadow: 0 0 0 18px transparent;
       animation: pulse 1s;
+      
     }
   }
+  
 @keyframes pulse {
   from {
     box-shadow: 0 0 0 0 #E6007E;
   }
+
 }
 @keyframes pulseSubmit {
   from {
