--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -69,7 +69,7 @@ a {
   display: block;
   font-size: 2rem;
   color: var(--color-gray);
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .storeDetail__like {
@@ -78,12 +78,64 @@ a {
   border: none;
   background-color: var(--color-background);
   margin-right: 1rem;
+  /* pulse */
+  width: 2.3rem;
+  height: 2.3rem;
+  border-radius: 50%;
+  line-height: 2.3rem;
+  font-size: 1.5rem;
 }
 
 .storeDetail__like:hover {
   color: red;
 }
 
+/* pulse */
+.storeDetail__like {
+    &:hover {
+      box-shadow: 0 0 0 18px transparent;
+      animation: pulse 1s;
+    }
+  }
+@keyframes pulse {
+  from {
+    box-shadow: 0 0 0 0 #E6007E;
+  }
+}
+
+/* pulse */
+/*.storeDetail__like{
+	border: 0;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	background-color: white;
+	line-height: 50px;
+	font-size: 1.5rem;
+	color: #E6007E;
+}
+
+
+.storeDetail__like {
+    &:hover {
+      box-shadow: 0 0 0 18px transparent;
+      animation: pulse 1s;
+    }
+  }
+@keyframes pulse {
+  from {
+    box-shadow: 0 0 0 0 #E6007E;
+  }
+}*/
+
+.storeDetail__like__count {
+  font-size: 1rem;
+  color: black;
+}
+
+.storeDetail__title {
+  margin-top: 3rem;
+}
 .storeDetail__modify {
   font-size: 1.5rem;
   color: var(--color-background);
@@ -97,23 +149,13 @@ a {
   background-color: var(--color-accent);
 }
 
-.storeDetail__star__name {
-  display: flex;
-  align-items: center;
-  margin: 0 0 1rem 15rem;
-  font-size: 1.5rem;
-}
-
 .storeDetail__star {
-  margin-right: 5rem;
+  color: black;
+  margin-bottom: 1rem;
 }
 
 .storeDetail__starIcon {
   color: var(--color-starIcon);
-}
-
-.storeDetail__name {
-  padding-top: 5px;
 }
 
 .storeDetail__storeType,
@@ -130,6 +172,10 @@ a {
 .storeDetail__payment__title,
 .storeDetail__category__title {
   margin-right: 5rem;
+}
+
+.storeDetail__storeInsert__name {
+  margin-right: 3.8rem;
 }
 
 .storeDetail__photo {
@@ -296,28 +342,4 @@ a {
   padding: 0.7rem;
 }
 
-/* pulse */
 
-.storeDetail__like{
-	border: 0;
-	width: 50px;
-	height: 50px;
-	border-radius: 50%;
-	background-color: white;
-	line-height: 50px;
-	font-size: 1.5rem;
-	color: #E6007E;
-}
-
-
-.storeDetail__like {
-    &:hover {
-      box-shadow: 0 0 0 18px transparent;
-      animation: pulse 1s;
-    }
-  }
-@keyframes pulse {
-  from {
-    box-shadow: 0 0 0 0 #E6007E;
-  }
-}
