[영진]프론트- 네비바 메뉴 호버 css 수정

--- a/hositamtam/src/main/webapp/css/loginHeader.css
+++ b/hositamtam/src/main/webapp/css/loginHeader.css
@@ -99,7 +99,8 @@ ul {
 }
 
 .mainHeader__menu__item:hover {
-  border-bottom: 1px solid var(--color-accent);
+  border: 1.5px solid var(--color-accent);
+  border-radius: 0.5rem;
 }
 
 .mainHeader__menu__item.active {
