경인 - storeList.js 사진 보이도록 수정

--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -186,7 +186,7 @@ button{
     
 }
 
-#mkImg img{
+.imgContainer img{
     width: 300px;
 
 }
@@ -258,6 +258,7 @@ button{
     line-height: 40px;
     text-decoration: none;
 }
+
 .countContainer{
     display: flex;
 }
