--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -4,12 +4,14 @@
 
 html {
   scroll-behavior: smooth;
+  
 }
 
 body {
   font-family: "GmarketSans";
   margin: 0;
    overflow: auto;
+   
 }
 
 
@@ -93,7 +95,7 @@ button{
 	min-width: 450px;
 	max-height: 90vh;
 	overflow: auto;
-	
+	overflow-x: hidden;
     
 }
 
@@ -106,9 +108,13 @@ button{
     border-bottom: 2px solid #0e4194;
     min-height: 180px;
 	padding: 5px;
+	justify-content: center;
 }
-.mkcontainer:hover{
+/*.mkcontainer:hover{
     background-color: #eeeeee;
+}*/
+.personalScontent{
+	text-align: center;
 }
 #mkSearchName{
     font-size: 2rem;
@@ -141,10 +147,10 @@ button{
 
 #toPost{
     padding: 5px;
-    
+    line-height: 40px;
     border-radius: 10px;
-    
-    width: 150px;
+    text-align: center;
+    width: 100px;
     height: 50px;
     background-color: #e6007e;
     border: 0;
@@ -212,8 +218,9 @@ button{
 	height: 260px;
 }
 .infoImgContainer img {
-	width: 370px;
+	width: 390px;
 	height: 260px;
+	margin:auto;
 }
 #mkListResult{
     overflow: auto;
@@ -262,13 +269,14 @@ button{
     top: 0; /* hover 상태에서 down을 아래로 이동하여 표시 */
   }
 .infoContent{
-    width: 380px;
+    width: 400px;
     padding: 5px;
+    text-align: center;
     /* background-color: #eeeeee; */
 }
-.infoContent h4{
+/*.infoContent h4{
     text-align: center;
-}
+}*/
 .infoContent a{
     display: inline-block;
     /* font-family: 'GmarketSans'; */
@@ -277,11 +285,40 @@ button{
     color: white;
     border: 0px;
     font-size: 1rem;
-    width: 100px;
+    width: 120px;
     height: 40px;
     border-radius: 10px;
     line-height: 40px;
     text-decoration: none;
+    box-shadow: 1px 4px 0 rgb(0,0,0,0.5);
+}
+.infoContent a:active{
+	  box-shadow: 1px 1px 0 rgb(0,0,0,0.5);
+  position: relative;
+  top:2px;
+}
+.notStore{
+    display: inline-block;
+    /* font-family: 'GmarketSans'; */
+    margin-left: 5px;
+    background-color: #e6007e;
+    color: white;
+    border: 0px;
+    font-size: 1rem;
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    line-height: 40px;
+    text-decoration: none;
+    box-shadow: 1px 4px 0px 0px pink;
+}
+   
+
+
+.notStore:active {
+  box-shadow: 1px 1px 0px 0px  pink;;
+  position: relative;
+  top:2px;
 }
 
 .countContainer{
@@ -292,6 +329,46 @@ button{
 }
 
 .fa-heart{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #e6007e;
 }
+.categoryAndType span{
+	color: gray;
+}
+.categoryAndType {
+	line-height: 50px;
+	clear: both;
+}
+.sName {
+	display: flex;
+	justify-content: center;
+	/*float: left;
+	left: 50%;*/
+}
+.sName img{
+	width: 30px;
+	
+}
+.sName span{
+	font-size: 1.2rem;
+	font-weight: bold;
+}
+.likeHeart{
+	text-align: center;
+	clear: both;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
