--- a/hositamtam/src/main/webapp/css/postMain.css
+++ b/hositamtam/src/main/webapp/css/postMain.css
@@ -189,6 +189,98 @@ button {
 .btn-primary{
     background-color: #0e4194;
 }
+
+/* .market_form{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button{
+	margin-bottom: 10px;
+}
+
+
+.market_form > .flex-container {
+  display: flex-flow;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 10px;
+} */
+
+
+
+
+.market_form > button[name^="ㄱ-가"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㄴ-나"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㄷ-다"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㄹ-라"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅁ-마"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅂ-바"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅅ-사"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅇ-아"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅈ-자"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅊ-차"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅋ-카"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅌ-타"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅍ-파"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+.market_form > button[name^="ㅎ-하"]{
+	display: flex;
+  	flex-direction: column;
+  	justify-content: space-between;
+}
+
 #mno {
 	border-radius: 2px;
 	background-color: gray;
