--- a/hositamtam/src/main/webapp/css/marketList.css
+++ b/hositamtam/src/main/webapp/css/marketList.css
@@ -60,22 +60,31 @@ body {
 	box-sizing: border-box;
 	border-bottom: 1px solid #0e4194;
 	min-height: 150px;
+	padding: 10px 0px 5px 0px;
 	/*padding: 5px;*/
 }
+/*.mkcontainer:hover{*/
+/*    background-color: #eeeeee;*/
+/*}*/
 .mkcontainer:hover{
-    background-color: #eeeeee;
+    background-color: #e5f0f9;
 }
 #howGetMarket {
 	font-size: 1.5rem;
 	padding: 5px;
 	font-weight: bold;
 	border-bottom: 2px solid #0e4194;
-
 }
 
 .mkName {
 	font-size: 1.2rem;
 	font-weight: bold;
+}
+.mkName:hover {
+	font-size: 1.2rem;
+	font-weight: bold;
+/*	color: #0e4194;*/
+	color: #e6007e;
 }
 #mkaddr {
 	font-size: 1.1rem;
