--- a/hositamtam/src/main/webapp/css/postMain.css
+++ b/hositamtam/src/main/webapp/css/postMain.css
@@ -68,7 +68,7 @@ button {
     padding: 5px 5px 5px 5px;
     float: left;
    margin-bottom: 2px;
-    margin-left: 2px;
+    /*margin-left: 2px;*/
     color: black;
     text-decoration: none;
     border: 1px solid black;
@@ -142,6 +142,7 @@ button {
 }
 
 .mkNameList{
+
     position: absolute;
     width: 1400px;
     visibility: hidden;
