--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -256,9 +256,15 @@ font-size: 2.5rem;
 .grade1, .grade2, .grade3, .grade4, .grade5{
  width: 250px;
  height: 50px;
+ text-align: center;
+ padding-top: 0.9rem;
 }
-.grade1{
 
+.grade1, .grade2, .grade3, .grade4 {
+	color: var(--color-background);
+}
+
+.grade1{
   background-color: #e6007e;
 }
 .grade2{
