--- a/hositamtam/src/main/webapp/css/postUpdate.css
+++ b/hositamtam/src/main/webapp/css/postUpdate.css
@@ -12,17 +12,22 @@ body {
    overflow: auto;
 }
 
+
 .section {
     width: 100%;
     height: 100%;
+   
     position: relative;
   }
   #section1{
-      margin-top: 3rem;
-      margin-bottom: 3rem;
-      padding-top: 10px;
+      margin-top: 0.5rem;
+     
       width: 100%;
-      height: 100%;
+      height: 100vh;
+       background-color: #eeeeee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
       position: relative;
       
   }
@@ -37,9 +42,9 @@ textarea {
 
 }
 .postCategory-radio{
-    font-size: 2rem;
+    font-size: 1.3rem;
     display: flex;
-    justify-content: space-around;
+ 
 }  
 .postCategory-radio input[type="radio"]{
     display: none;
@@ -56,11 +61,9 @@ textarea {
 
 .radioBox{
     width: 160px;
-    text-align: center;
+
 }
-.radioBox:hover{
-    background-color: #0188CC;
-}
+
 .postHead{
     
     font-size: 1.3rem;
@@ -107,4 +110,46 @@ textarea {
 .btn-primary::after{
 	clear: both;
 }
+
+.postHead, .postContent {
+	padding: 5px;
+}
+.postContent input{
+	width: 1200px;
+	height: 500px;
+}
+
+
+.submit{
+	 width: 80px;
+    height: 40px;
+    border: 0;
+    
+     color: white;
+    background-color: #0188CC;
+
+}
+.modify{
+	width: 80px;
+    height: 40px;
+    border: 0;
+    
+     color: black;
+    background-color: #eeeeee;
+}
+.container h2 {
+	text-align: center;
+}
+.container {
+	
+	background-color: white;
+	height: 85vh;
+}
+.btnBox{
+	float: right;
+}
+
+
+
+
 
