--- a/hositamtam/src/main/webapp/css/loginHeader.css
+++ b/hositamtam/src/main/webapp/css/loginHeader.css
@@ -43,14 +43,16 @@ ul {
   position: fixed;
   top: 0;
   width: 100%;
-  padding: 0;
+  padding: 1rem 1rem 0 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1;
-  background-color: var(--color-background);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+/*  background-color: var(--color-background);*/
+/*  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,*/
+/*    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;*/
+  background-color: transparent;
+  box-shadow:none;
 }
 
 .mainHeader__logo__img {
