경인 - 폐업제보 수정 + 찜 수정 + 클릭버튼으로 인포윈도우 기능 수정 + sql 파일 수정 등

--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -74,7 +74,7 @@ a {
 
 .storeDetail__like {
   font-size: 2rem;
-  color: var(--color-gray);
+  /*color: var(--color-gray);*/
   border: none;
   background-color: var(--color-background);
   margin-right: 1rem;
@@ -84,6 +84,7 @@ a {
   border-radius: 50%;
   line-height: 2.3rem;
   font-size: 1.5rem;
+  color: red;
 }
 
 .storeDetail__like:hover {
