--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -264,7 +264,7 @@ font-size: 2rem;
 /*========================= section2===================================== */
 .hosiInfo{
   width: 80%;
-  height: 50vh;
+  
   /* border: 4px solid #0E4194; */
   margin: 0 auto;
 }
@@ -372,10 +372,15 @@ font-size: 2rem;
   color: #333333;
 }
 
-.swiper {
+.carousel-item {
   width: 100%;
   height: 600px;
 }
+.carousel-item img{
+  width: 100%;
+ 
+}
+
 /*====================================================================*/
 @keyframes pong {
   from {
