--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -351,7 +351,13 @@ button{
 	clear: both;
 }
 
-
+.listLinkInfowindow{
+	background-color: white;
+	color: #e6007e;
+	border: 0px;
+	font-size: 1rem;
+	width: 100px;
+}
 
 
 
