--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -100,13 +100,13 @@ button{
 .mkcontainer{
     display: flex;
     border-bottom: 2px solid #0e4194;
-    min-height: 180px;
+    min-height: 140px;
 	padding: 5px;
-	justify-content: center;
+	
 }
 
 .personalScontent{
-	text-align: center;
+	
 }
 #mkSearchName{
     font-size: 2rem;
@@ -334,7 +334,7 @@ button{
 }
 .sName {
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	/*float: left;
 	left: 50%;*/
 }
@@ -358,6 +358,22 @@ button{
 	font-size: 1rem;
 	width: 100px;
 }
+.storeEtc{
+	width: 70%;
+	float: left;
+}
+.storeImgContainer{
+	width: 30%;
+	float: left;
+	border-radius: 20px;
+}
+.storeImgContainer img{
+	border-radius: 20px;
+	width: 100%;
+	height: 100px;
+}
+
+
 
 
 
