가운데 정렬

--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -359,6 +359,7 @@ button{
 	width: 30%;
 	float: left;
 	border-radius: 20px;
+	line-height: 140px;
 }
 .storeImgContainer img{
 	border-radius: 20px;
