--- a/hositamtam/src/main/webapp/css/postUpdate.css
+++ b/hositamtam/src/main/webapp/css/postUpdate.css
@@ -20,7 +20,6 @@ body {
     position: relative;
   }
   #section1{
-      margin-top: 0.5rem;
      
       width: 100%;
       height: 100vh;
@@ -108,7 +107,7 @@ textarea {
 	 width: 80px;
     height: 40px;
     border: 0;
-    
+    border-radius: 10px;
      color: white;
     background-color: #0188CC;
 
@@ -122,18 +121,21 @@ span{
 	color: #0188CC;
 }
 .container {
-	border: 2px solid #0188CC;
+	/*border: 2px solid #0188CC;*/
 	padding-top: 5px;
 	border-radius: 20px;	
 	background-color: white;
 	height: 90vh;
 	padding: 10px;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 .btnBox{
 	float: right;
 }
 .container label{
-	font-size: bold;
+	font-size: 1.3rem;
+	font-weight: bold;
+	color: #0188CC;
 }
 
 
