--- a/hositamtam/src/main/webapp/css/storeInsertAndUpdate.css
+++ b/hositamtam/src/main/webapp/css/storeInsertAndUpdate.css
@@ -28,6 +28,13 @@ body {
   margin: 0;
 }
 
+.section {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 /* common */
 .max-container {
   max-width: var(--size-max-width);
