--- a/hositamtam/src/main/webapp/css/join.css
+++ b/hositamtam/src/main/webapp/css/join.css
@@ -38,7 +38,14 @@ body {
 #join {
   display: flex;
   height: 1116px;
+  /*height: 745px;*/
   margin: auto;
+}
+
+.join__section {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)), url(/finalProject/images/loginBg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .join {
@@ -50,6 +57,14 @@ body {
   width: 450px;
   border: 3px solid var(--color-accent);
   border-radius: 50px;
+  margin-left: 55rem;
+  /* background-color: var(--color-background); */
+  background-color: #faf7f7;
+}
+
+.join__logo {
+  width: 12rem;
+  margin: 0;
 }
 
 #join__form {
@@ -60,7 +75,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0.5rem;
+  margin: 0.5rem; 
+  /*margin: 1rem;*/
 }
 
 .join__input {
@@ -71,22 +87,24 @@ body {
   border: 3px solid var(--color-primary);
   border-radius: 4px;
   font-size: 1rem;
+  background-color: #faf7f7;
 }
 
 .duplication__check {
-  width: 20%;
+  width: 18%;
   border: none;
   border-radius: 4px;
   color: var(--color-background);
   background-color: #d9d9d9;
   font-size: 15px;
   margin-left: 1rem;
+  padding-top: 0.3rem;
   cursor: pointer;
 }
 
 .join__error {
   color: red;
-  margin: 1rem 0;
+  margin: 2rem 0;
 }
 
 .join__button {
@@ -103,4 +121,15 @@ body {
 
 .join__button:hover {
   background-color: var(--color-accent);
+}
+
+.joinBg__source {
+  position: fixed;
+  color: var(--color-gray);
+  font-size: 0.8rem;
+  width: 3rem;
+  height: 3rem;
+  bottom: 12rem;
+  right: 1rem;
+  text-decoration: none;
 }
