--- a/hositamtam/src/main/webapp/css/storeList.css
+++ b/hositamtam/src/main/webapp/css/storeList.css
@@ -32,23 +32,41 @@ body {
     background: rgba(33, 122, 244, .1);  스크롤바 뒷 배경 색상
 }*/
 .section {
-    margin-top: 3rem;
-    width: 100%;
-    height: 100%;
-    position: relative;
+	margin-top: 5rem;
+	width: 100%;
+	height: 100%;
+	position: relative;
    
   }
 
 
 
-#map {
+.map {
 	min-width: 500px;
 	min-height: 500px;
-	width: 75%;
-	height: 93vh;
+	width: 78%;
+	height: 85vh;
 	float: left;
+	margin: 2rem 1rem 1rem 2rem;
+	border: 2.5px solid #0e4194;
+	border-radius: 15px; /* 곡선 테두리 반경 지정 */
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); /* 회색 그림자 추가 */
 }
 
+.mkSideBox {
+	width: 17%;
+	height: 85vh;
+	float: left;
+	margin: 2rem 0 1rem 1.5rem;
+	background-color: rgb(243, 243, 243);
+	border: 2.5px solid #0e4194;
+	border-radius: 15px;  
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);  
+	z-index: 1;	
+}
+.store {
+	border: 2.5px solid #e6007e;
+}
 
 #mkListResult {
 	
@@ -371,17 +389,3 @@ button{
 	width: 1.5rem;
 	padding-bottom: 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
