--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -362,14 +362,24 @@ font-size: 2rem;
 } 
 .fa-github{
   color: white;
+  font-size: 1.5rem;
+  /*margin-bottom: 1rem;*/
 }
-.bi-arrow-up-circle-fill{
-  color: white;
 
+.fa-github:hover {
+	color: var(--color-accent);
+}
+
+.bi-arrow-up-circle-fill {
+  color: white;
 }
 
 .dropDownMenu a{
   color: #333333;
+}
+
+.btn {
+	margin: 1rem 0;
 }
 
 .carousel-item {
