[영진]마이페이지 점포상세 등 css 수정

--- a/hositamtam/src/main/webapp/css/join.css
+++ b/hositamtam/src/main/webapp/css/join.css
@@ -58,6 +58,7 @@ body {
   border: 3px solid var(--color-accent);
   border-radius: 50px;
   margin-left: 55rem;
+  /*margin-left: 115%;*/
   /* background-color: var(--color-background); */
   background-color: #faf7f7;
 }
