--- a/hositamtam/src/main/webapp/css/myPage.css
+++ b/hositamtam/src/main/webapp/css/myPage.css
@@ -62,7 +62,7 @@ a {
   align-items: center;
   text-align: center;
   margin: 9rem 0 5rem 5rem;
-  padding: 40px;
+  padding: 2.5rem;
   width: 500px;
   border: 3px solid var(--color-accent);
   border-radius: 30px;
@@ -119,7 +119,7 @@ a {
   align-items: center;
   text-align: center;
   margin: 9rem 5rem 5rem 0;
-  padding: 40px;
+  padding: 2.5rem;
   width: 500px;
   border: 3px solid var(--color-accent);
   border-radius: 30px;
@@ -180,7 +180,7 @@ a {
 .myprofile__activity__contents {
   border: 3px solid var(--color-primary);
   width: 60%;
-  padding: 8px 0;
+  padding: 4px 0 3px;
   font-size: 1.05rem;
   margin: 0 0.5rem;
 }
@@ -225,12 +225,13 @@ a {
 .myStoreLike {
   display: flex;
   justify-content: space-between;
-  /* margin-top: 5rem; */
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .myPage__h2 {
   margin: 0;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .myPage__table {
@@ -301,7 +302,8 @@ a {
 
 .myReview__th__contents,
 .myReview__td__contents {
-  width: 50%;
+  /*width: 50%;*/
+  width: 45%;
 }
 
 .myReview__td__contents {
