--- a/hositamtam/src/main/webapp/css/storeDetail.css
+++ b/hositamtam/src/main/webapp/css/storeDetail.css
@@ -32,6 +32,12 @@ html {
 
 body {
   margin: 0;
+  /*background-image: url('../images/storeDetailBg1.png');
+  background-size: cover;  이미지를 화면에 맞게 늘리거나 축소합니다 
+  background-position: center;  이미지를 가운데 정렬합니다 
+  background-repeat: no-repeat;  배경 이미지 반복 제거 */
+  /*background-color: var(--color-gray);*/
+  background-color: #faf7f7;
 }
 
 a {
@@ -49,20 +55,29 @@ a {
   background: var(--color-accent);
   height: 1px;
   border: 0;
-  width: 80%;
+  width: 85%;
+  margin: 1rem 0 1rem 5rem;
+  opacity: 1;
 }
 
 .storeDetail__h4 {
   margin: 0;
+  font-weight: bold;
+}
+
+/* Main */
+#storeDetail__main {
+	background-color: white;
 }
 
 /* Store Detail */
 #storeDetail {
-  width: 960px;
+  width: 60rem;
   text-align: center;
   margin-top: 10rem;
   padding: 2rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: white;
 }
 
 .storeDetail__info {
@@ -141,6 +156,7 @@ a {
 
 .storeDetail__like__count {
   font-size: 1.5rem;
+  font-weight: bold;
   color: black;
 }
 
@@ -200,14 +216,19 @@ a {
 
 /* Review */
 #review {
-  width: 100%;
+  width: 60rem;
   text-align: center;
+  background-color: white;
+  border-top: 2px solid var(--color-gray);
+  border-bottom: 2px solid var(--color-gray);
 }
 
 .review__info {
   display: block;
   font-size: 1.7rem;
-  margin: 2.5rem 0 1.7rem;
+  /*margin: 2.5rem 0;*/
+  padding: 1rem 0;
+  
 }
 
 .review__level {
@@ -217,7 +238,6 @@ a {
 .review__level__photo {
   width: 2rem;
   margin-right: 1rem;
-  padding-top: 1rem;
 }
 
 .review__ask {
@@ -282,7 +302,10 @@ a {
 
 /* Review Contents */
 #review__contents {
-  width: 100%;
+  width: 60rem;
+  background-color: white;
+  padding: 2rem 0;
+  margin-bottom: 5rem;
 }
 
 .review__contents__total {
@@ -302,7 +325,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 9fr;
   align-items: center;
-  margin: 1rem 10rem 1rem 10rem;
+  margin: 1rem 5rem 1rem 5rem;
 }
 
 .review__contents__photo {
