--- a/hositamtam/src/main/webapp/css/main.css
+++ b/hositamtam/src/main/webapp/css/main.css
@@ -418,6 +418,12 @@ font-size: 2rem;
 	color: #0e4194;
 	font-size: 1.5rem;
 }
+.expInfo{
+	width: 1250px;
+	margin: 0 auto;
+	text-align: right;
+	}
+
 /*====================================================================*/
 @keyframes pong {
   from {
